Rename solution and projects & update namespaces

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api/PdfReportsGenerator.Api.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api/PdfReportsGenerator.Api.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DAL\DAL.csproj" />
+      <ProjectReference Include="..\PdfReportsGenerator.Dal\PdfReportsGenerator.Dal.csproj" />
     </ItemGroup>
 
 </Project>
