--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api/appsettings.json
@@ -1,9 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": ["Serilog.Sinks.File"],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/myLog-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Destructure": [
+      { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
+      { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
+      { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
