Replace logging to a file with output to the console

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api/appsettings.json
@@ -1,6 +1,8 @@
 {
   "Serilog": {
-    "Using": ["Serilog.Sinks.File"],
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -10,17 +12,28 @@
     },
     "WriteTo": [
       {
-        "Name": "File",
-        "Args": {
-          "path": "logs/myLog-.txt",
-          "rollingInterval": "Day"
-        }
+        "Name": "Console"
       }
     ],
     "Destructure": [
-      { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
-      { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
-      { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
+      {
+        "Name": "ToMaximumDepth",
+        "Args": {
+          "maximumDestructuringDepth": 4
+        }
+      },
+      {
+        "Name": "ToMaximumStringLength",
+        "Args": {
+          "maximumStringLength": 100
+        }
+      },
+      {
+        "Name": "ToMaximumCollectionCount",
+        "Args": {
+          "maximumCollectionCount": 10
+        }
+      }
     ]
   },
   "AllowedHosts": "*",
