--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api/PdfReportsGenerator.Api.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api/PdfReportsGenerator.Api.csproj
@@ -12,7 +12,13 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
+        <PackageReference Include="Sentry.AspNetCore" Version="3.41.3" />
+        <PackageReference Include="Sentry.EntityFramework" Version="3.41.3" />
         <PackageReference Include="Serilog" Version="3.1.1" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
