--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Sentry": {
+    "Dsn": "https://5a737d8c912e898e433e1b55ecebe9a6@o4506411489361920.ingest.sentry.io/4506413229604864",
+    "TracesSampleRate": 1.0,
+    "DiagnosticLevel": "info"
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console"
