Configure Api.Grpc

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api.Restful/PdfReportsGenerator.Api.Restful.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api.Restful/PdfReportsGenerator.Api.Restful.csproj
@@ -25,6 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\PdfReportsGenerator.Bll\PdfReportsGenerator.Bll.csproj" />
       <ProjectReference Include="..\PdfReportsGenerator.Dal\PdfReportsGenerator.Dal.csproj" />
     </ItemGroup>
 
