--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api.Grpc/PdfReportsGenerator.Api.Grpc.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api.Grpc/PdfReportsGenerator.Api.Grpc.csproj
@@ -7,11 +7,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Protobuf Include="Protos\greet.proto" GrpcServices="Server"/>
+        <Protobuf Include="Protos\report_tasks.proto" GrpcServices="Server" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Grpc.AspNetCore" Version="2.57.0"/>
+        <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
+        <PackageReference Include="Sentry.AspNetCore" Version="3.41.3" />
+        <PackageReference Include="Sentry.EntityFramework" Version="3.41.3" />
+        <PackageReference Include="Serilog" Version="3.1.1" />
+        <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PdfReportsGenerator.Bll\PdfReportsGenerator.Bll.csproj" />
     </ItemGroup>
 
 </Project>
