--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api.Grpc/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api.Grpc/appsettings.json
@@ -1,11 +1,50 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Sentry": {
+    "Dsn": "https://5a737d8c912e898e433e1b55ecebe9a6@o4506411489361920.ingest.sentry.io/4506413229604864",
+    "TracesSampleRate": 1.0,
+    "DiagnosticLevel": "info"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Destructure": [
+      {
+        "Name": "ToMaximumDepth",
+        "Args": {
+          "maximumDestructuringDepth": 4
+        }
+      },
+      {
+        "Name": "ToMaximumStringLength",
+        "Args": {
+          "maximumStringLength": 100
+        }
+      },
+      {
+        "Name": "ToMaximumCollectionCount",
+        "Args": {
+          "maximumCollectionCount": 10
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=root;Host=localhost;Port=55588;Database=postgres;Pooling=true;"
+  },
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
