--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api.Restful/PdfReportsGenerator.Api.Restful.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api.Restful/PdfReportsGenerator.Api.Restful.csproj
@@ -8,8 +8,9 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -17,7 +18,8 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
         <PackageReference Include="Sentry.AspNetCore" Version="3.41.3" />
         <PackageReference Include="Sentry.EntityFramework" Version="3.41.3" />
         <PackageReference Include="Serilog" Version="3.1.1" />
