Add BlockConverter & Install Newtonsoft.Json

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Bll/PdfReportsGenerator.Bll.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Bll/PdfReportsGenerator.Bll.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\PdfReportsGenerator.Dal\PdfReportsGenerator.Dal.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\Interfaces\" />
+    </ItemGroup>
+
 </Project>
