--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api.Restful/PdfReportsGenerator.Api.Restful.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api.Restful/PdfReportsGenerator.Api.Restful.csproj
@@ -32,4 +32,8 @@
       <ProjectReference Include="..\PdfReportsGenerator.Dal\PdfReportsGenerator.Dal.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Requests\" />
+    </ItemGroup>
+
 </Project>
