--- a/PDFReportsGenerator/src/PdfReportsGenerator.Bll/PdfReportsGenerator.Bll.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Bll/PdfReportsGenerator.Bll.csproj
@@ -14,4 +14,8 @@
       <Folder Include="Services\Interfaces\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
