--- a/PDFReportsGenerator/tests/UnitTests/UnitTests.csproj
+++ b/PDFReportsGenerator/tests/UnitTests/UnitTests.csproj
@@ -6,4 +6,17 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoBogus" Version="2.13.1" />
+      <PackageReference Include="Bogus" Version="35.3.0" />
+      <PackageReference Include="FluentAssertions" Version="6.12.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+      <PackageReference Include="Moq" Version="4.20.70" />
+      <PackageReference Include="xunit" Version="2.6.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\PdfReportsGenerator.Bll\PdfReportsGenerator.Bll.csproj" />
+    </ItemGroup>
+
 </Project>
