--- a/PDFReportsGenerator/src/PdfReportsGenerator.Bll/PdfReportsGenerator.Bll.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Bll/PdfReportsGenerator.Bll.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="11.5.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
