Refactor gRPC service & Add base for report creation

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api.Grpc/PdfReportsGenerator.Api.Grpc.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api.Grpc/PdfReportsGenerator.Api.Grpc.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Protobuf Include="Protos\report_tasks.proto" GrpcServices="Server" />
+        <Protobuf Include="Protos\reports.proto" GrpcServices="Server" />
     </ItemGroup>
 
     <ItemGroup>
