--- a/PDFReportsGenerator/src/PdfReportsGenerator.BackgroundWorker/PdfReportsGenerator.BackgroundWorker.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.BackgroundWorker/PdfReportsGenerator.BackgroundWorker.csproj
@@ -11,6 +11,8 @@
       <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="7.3.0.1" />
       <PackageReference Include="Minio" Version="6.0.2" />
       <PackageReference Include="QuestPDF" Version="2023.12.6" />
+      <PackageReference Include="Serilog" Version="3.1.1" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
       <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.7" />
     </ItemGroup>
 
