--- a/PDFReportsGenerator/src/PdfReportsGenerator.Api.Restful/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Api.Restful/appsettings.json
@@ -1,8 +1,8 @@
 {
   "KafkaConfiguration": {
-    "KafkaExternalAddress": "192.168.49.2:31662",
+    "KafkaExternalAddress": "192.168.49.2:31939",
     "SaslUsername": "user1",
-    "SaslPassword": "EqIaqPl7VW",
+    "SaslPassword": "YmScfOHfF5",
     "TopicName": "cool-topic"
   },
   "Sentry": {
