--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
+    "sass": "^1.74.1",
     "scss": "^0.2.4"
   },
   "devDependencies": {
