Move Kafka logic to different project

--- a/PDFReportsGenerator/src/PdfReportsGenerator.BackgroundWorker/PdfReportsGenerator.BackgroundWorker.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.BackgroundWorker/PdfReportsGenerator.BackgroundWorker.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\PdfReportsGenerator.Bll\PdfReportsGenerator.Bll.csproj" />
+      <ProjectReference Include="..\PDFReportsGenerator.Kafka\PDFReportsGenerator.Kafka.csproj" />
     </ItemGroup>
 
 </Project>
