--- a/PDFReportsGenerator/src/PDFReportsGenerator.Kafka/PDFReportsGenerator.Kafka.csproj
+++ b/PDFReportsGenerator/src/PDFReportsGenerator.Kafka/PDFReportsGenerator.Kafka.csproj
@@ -12,4 +12,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
+    </ItemGroup>
+
 </Project>
