--- a/PDFReportsGenerator/src/PdfReportsGenerator.App.Bll/PdfReportsGenerator.App.Bll.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.App.Bll/PdfReportsGenerator.App.Bll.csproj
@@ -8,6 +8,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\PdfReportsGenerator.Dal\PdfReportsGenerator.Dal.csproj" />
+      <ProjectReference Include="..\PDFReportsGenerator.Kafka\PDFReportsGenerator.Kafka.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Newtonsoft.Json">
+        <HintPath>..\..\..\..\..\.nuget\packages\newtonsoft.json\13.0.3\lib\net6.0\Newtonsoft.Json.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
