--- a/PDFReportsGenerator/src/PdfReportsGenerator.Dal/PdfReportsGenerator.Dal.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Dal/PdfReportsGenerator.Dal.csproj
@@ -17,4 +17,10 @@
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Newtonsoft.Json">
+        <HintPath>..\..\..\..\..\.nuget\packages\newtonsoft.json\13.0.3\lib\net6.0\Newtonsoft.Json.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
