Start to implement clean architecture principles at main application.

--- a/PDFReportsGenerator/src/PdfReportsGenerator.AdministratorApp.Api/PdfReportsGenerator.AdministratorApp.Api.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.AdministratorApp.Api/PdfReportsGenerator.AdministratorApp.Api.csproj
@@ -17,7 +17,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\PdfReportsGenerator.AdministratorApp.Bll\PdfReportsGenerator.AdministratorApp.Bll.csproj" />
-      <ProjectReference Include="..\PdfReportsGenerator.Core\PdfReportsGenerator.Core.csproj" />
+      <ProjectReference Include="..\PdfReportsGenerator.Domain\PdfReportsGenerator.Domain.csproj" />
     </ItemGroup>
 
 </Project>
