--- a/PDFReportsGenerator/src/PdfReportsGenerator.AdministratorApp.Bll/PdfReportsGenerator.AdministratorApp.Bll.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.AdministratorApp.Bll/PdfReportsGenerator.AdministratorApp.Bll.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PdfReportsGenerator.Core\PdfReportsGenerator.Core.csproj" />
+      <ProjectReference Include="..\PdfReportsGenerator.Domain\PdfReportsGenerator.Domain.csproj" />
       <ProjectReference Include="..\PDFReportsGenerator.Kafka\PDFReportsGenerator.Kafka.csproj" />
     </ItemGroup>
 
