Make `PdfReportsGenerator.Gateway.Rest` build.

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "Sentry": {
-    "Dsn": "https://5a737d8c912e898e433e1b55ecebe9a6@o4506411489361920.ingest.sentry.io/450641322ISettingsFactory9604864",
-    "TracesSampleRate": 1.0,
-    "DiagnosticLevel": "info"
+  "KafkaConfigurationOptions": {
+    "KafkaExternalAddress": "your-kafka-address",
+    "SaslUsername": "your-username",
+    "SaslPassword": "your-password",
+    "TopicName": "your-topic-name"
   },
   "Serilog": {
     "Using": [
@@ -42,7 +43,7 @@
     ]
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=root;Host=192.168.49.2;Port=30001;Database=postgres;Pooling=true;"
+  "DatabaseOptions": {
+    "ConnectionString": "User ID=postgres;Password=root;Host=192.168.49.2;Port=30001;Database=postgres;Pooling=true;"
   }
 }
