Connect to Database.

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Grpc/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Grpc/appsettings.json
@@ -43,7 +43,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=root;Host=192.168.49.2;Port=30001;Database=postgres;Pooling=true;"
+    "DefaultConnection": "User ID=admin;Password=admin;Host=localhost;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
   },
   "Kestrel": {
     "EndpointDefaults": {
