--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
@@ -44,6 +44,6 @@
   },
   "AllowedHosts": "*",
   "DatabaseOptions": {
-    "ConnectionString": "User ID=postgres;Password=root;Host=192.168.49.2;Port=30001;Database=postgres;Pooling=true;"
+    "ConnectionString": "User ID=admin;Password=admin;Host=localhost;Port=5432;Database=ReportTasks;Pooling=true;"
   }
 }
