Configure massTransit bus.

--- a/PDFReportsGenerator/Solution items/docker-compose.yaml
+++ b/PDFReportsGenerator/Solution items/docker-compose.yaml
@@ -1,16 +1,16 @@
 services:
-#  postgres:
-#    image: postgres:latest
-#    container_name: postgres
-#    ports:
-#      - 5432:5432
-#    environment:
-#      - POSTGRES_PASSWORD=admin
-#      - POSTGRES_USER=admin
-#      - POSTGRES_DB=PdfReportsGenerator
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data
-#
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=admin
+      - POSTGRES_DB=PdfReportsGenerator
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     container_name: zookeeper
@@ -36,8 +36,6 @@ services:
     ports:
       - "9092:9092"
       - "29092:29092"
-#    volumes:
-#      - kafka_data:/bitnami/kafka
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -49,21 +47,20 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
-#
-#  minio:
-#    image: minio/minio:latest
-#    container_name: minio
-#    ports:
-#      - 9000:9000
-#      - 9001:9001
-#    environment:
-#      MINIO_ROOT_USER: minioadmin
-#      MINIO_ROOT_PASSWORD: minioadmin
-#    command: server /data --console-address ":9001"
-#    volumes:
-#      - minio_data:/data
 
-#volumes:
-#  kafka_data:
-#  postgres_data:
-#  minio_data:
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
+
+volumes:
+  postgres_data:
+  minio_data:
