Configure MinIO client.

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
@@ -1,10 +1,16 @@
 {
   "KafkaConfigurationOptions": {
-    "KafkaExternalAddress": "localhost:29092",
+    "Url": "localhost:29092",
     "SaslUsername": "your-username",
     "SaslPassword": "your-password",
     "TopicName": "pdf_reports",
     "ConsumerGroupId": "mass_transit_consumer_1"
+  },
+  "MinioConfigurationOptions": {
+    "Url": "localhost:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "BucketName": "reports"
   },
   "Serilog": {
     "Using": [
