--- a/PDFReportsGenerator/PdfReportsGenerator.Infrastructure/PdfReportsGenerator.Infrastructure.csproj
+++ b/PDFReportsGenerator/PdfReportsGenerator.Infrastructure/PdfReportsGenerator.Infrastructure.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
         <PackageReference Include="MassTransit" Version="8.3.4" />
         <PackageReference Include="MassTransit.Kafka" Version="8.3.4" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.11" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.11" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
