--- a/PDFReportsGenerator/src/PdfReportsGenerator.Application/PdfReportsGenerator.Application.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Application/PdfReportsGenerator.Application.csproj
@@ -17,6 +17,9 @@
       <PackageReference Include="Minio" Version="6.0.2" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="QuestPDF" Version="2023.12.6" />
+      <PackageReference Include="Serilog" Version="4.2.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
       <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.7" />
     </ItemGroup>
 
