--- a/ui/package.json
+++ b/ui/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "formik": "^2.4.6",
     "next": "14.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "sass": "^1.83.0",
     "scss": "^0.2.4"
   },
   "devDependencies": {
@@ -23,6 +23,8 @@
     "@types/react-dom": "^18.3.5",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.1.4",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
     "typescript": "^5.7.2"
   }
 }
