Fix Gateway.Rest dependencies.

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/PdfReportsGenerator.Gateway.Rest.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/PdfReportsGenerator.Gateway.Rest.csproj
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\PdfReportsGenerator.Infrastructure\PdfReportsGenerator.Infrastructure.csproj" />
+      <ProjectReference Include="..\PdfReportsGenerator.Infrastructure\PdfReportsGenerator.Infrastructure.csproj" />
       <ProjectReference Include="..\PdfReportsGenerator.Application\PdfReportsGenerator.Application.csproj" />
     </ItemGroup>
 
