--- a/ui/config.json
+++ b/ui/config.json
@@ -1,3 +1,3 @@
 {
-  "apiReportsBaseUrl": "https://localhost:7090/app/v1/reports"
+  "apiReportsBaseUrl": "https://localhost:7091/api/v1/reports"
 }
