Connect to websocket.

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
@@ -12,6 +12,9 @@
     "SecretKey": "minioadmin",
     "BucketName": "reports"
   },
+  "AppConfigurationOptions": {
+    "TaskProcessingMillisecondsDelay": 1500
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console"
