--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
@@ -54,6 +54,6 @@
   },
   "AllowedHosts": "*",
   "DatabaseOptions": {
-    "ConnectionString": "User ID=admin;Password=admin;Host=localhost;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
+    "ConnectionString": "User ID=admin;Password=admin;Host=postgres;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
   }
 }
