--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.json
@@ -1,20 +1,4 @@
 {
-  "KafkaConfigurationOptions": {
-    "Url": "localhost:29092",
-    "SaslUsername": "your-username",
-    "SaslPassword": "your-password",
-    "TopicName": "pdf_reports",
-    "ConsumerGroupId": "mass_transit_consumer_1"
-  },
-  "MinioConfigurationOptions": {
-    "Url": "localhost:9000",
-    "AccessKey": "minioadmin",
-    "SecretKey": "minioadmin",
-    "BucketName": "reports"
-  },
-  "AppConfigurationOptions": {
-    "TaskProcessingMillisecondsDelay": 1500
-  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console"
@@ -52,8 +36,5 @@
       }
     ]
   },
-  "AllowedHosts": "*",
-  "DatabaseOptions": {
-    "ConnectionString": "User ID=admin;Password=admin;Host=postgres;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
-  }
+  "AllowedHosts": "*"
 }
