--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.Release.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.Release.json
@@ -3,19 +3,19 @@
     "TaskProcessingMillisecondsDelay": 1500
   },
   "KafkaConfigurationOptions": {
-    "Url": "localhost:29092",
+    "Url": "kafka:29092",
     "SaslUsername": "your-username",
     "SaslPassword": "your-password",
     "TopicName": "pdf_reports",
     "ConsumerGroupId": "mass_transit_consumer_1"
   },
   "MinioConfigurationOptions": {
-    "Url": "localhost:9000",
+    "Url": "minio:9000",
     "AccessKey": "minioadmin",
     "SecretKey": "minioadmin",
     "BucketName": "reports"
   },
   "DatabaseOptions": {
-    "ConnectionString": "User ID=admin;Password=admin;Host=localhost;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
+    "ConnectionString": "User ID=admin;Password=admin;Host=postgres;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
   }
 }
