--- a/PDFReportsGenerator/Solution items/docker-compose.yaml
+++ b/PDFReportsGenerator/Solution items/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - "8081:8081"
     environment:
       - APP_UID=1001
+      - ASPNETCORE_ENVIRONMENT=Release
     depends_on:
       - postgres
       - zookeeper
