--- a/ui/config.json
+++ b/ui/config.json
@@ -1,4 +1,4 @@
 {
-  "apiReportsBaseUrl": "https://localhost:7091/api/v1/reports",
-  "webSocketUrl": "https://localhost:7091/signalR"
+  "apiReportsBaseUrl": "http://localhost:8080/api/v1/reports",
+  "webSocketUrl": "http://localhost:8080/signalR"
 }
