Add db migrator.

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/Properties/launchSettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/Properties/launchSettings.json
@@ -19,14 +19,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Release": {
+    "Staging": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7091;http://localhost:5124",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Release"
+        "ASPNETCORE_ENVIRONMENT": "Staging"
       }
     }
   }
