Fix docker compose and add kafka topic creation.

--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.Staging.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.Staging.json
@@ -3,11 +3,13 @@
     "TaskProcessingMillisecondsDelay": 1500
   },
   "KafkaConfigurationOptions": {
-    "Url": "kafka:29092",
+    "Url": "kafka:9092",
     "SaslUsername": "your-username",
     "SaslPassword": "your-password",
     "TopicName": "pdf_reports",
-    "ConsumerGroupId": "mass_transit_consumer_1"
+    "ConsumerGroupId": "mass_transit_consumer_1",
+    "NumPartitions": 3,
+    "ReplicationFactor": 1
   },
   "MinioConfigurationOptions": {
     "Url": "minio:9000",
