--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.Development.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Rest/appsettings.Development.json
@@ -7,7 +7,9 @@
     "SaslUsername": "your-username",
     "SaslPassword": "your-password",
     "TopicName": "pdf_reports",
-    "ConsumerGroupId": "mass_transit_consumer_1"
+    "ConsumerGroupId": "mass_transit_consumer_1",
+    "NumPartitions": 3,
+    "ReplicationFactor": 1
   },
   "MinioConfigurationOptions": {
     "Url": "localhost:9000",
