--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Grpc/appsettings.Staging.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Grpc/appsettings.Staging.json
@@ -3,7 +3,7 @@
     "TaskProcessingMillisecondsDelay": 1500
   },
   "KafkaConfigurationOptions": {
-    "Url": "localhost:29092",
+    "Url": "kafka:9092",
     "SaslUsername": "your-username",
     "SaslPassword": "your-password",
     "TopicName": "pdf_reports",
@@ -12,12 +12,12 @@
     "ReplicationFactor": 1
   },
   "MinioConfigurationOptions": {
-    "Url": "localhost:9000",
+    "Url": "minio:9000",
     "AccessKey": "minioadmin",
     "SecretKey": "minioadmin",
     "BucketName": "reports"
   },
   "DatabaseOptions": {
-    "ConnectionString": "User ID=admin;Password=admin;Host=localhost;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
+    "ConnectionString": "User ID=admin;Password=admin;Host=postgres;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
   }
 }
