--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Grpc/appsettings.json
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Grpc/appsettings.json
@@ -1,9 +1,4 @@
 {
-  "Sentry": {
-    "Dsn": "https://5a737d8c912e898e433e1b55ecebe9a6@o4506411489361920.ingest.sentry.io/4506413229604864",
-    "TracesSampleRate": 1.0,
-    "DiagnosticLevel": "info"
-  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console"
@@ -41,13 +36,5 @@
       }
     ]
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "User ID=admin;Password=admin;Host=localhost;Port=5432;Database=PdfReportsGenerator;Pooling=true;"
-  },
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
-  }
+  "AllowedHosts": "*"
 }
