--- a/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Grpc/PdfReportsGenerator.Gateway.Grpc.csproj
+++ b/PDFReportsGenerator/src/PdfReportsGenerator.Gateway.Grpc/PdfReportsGenerator.Gateway.Grpc.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +19,12 @@
     <ItemGroup>
       <ProjectReference Include="..\PdfReportsGenerator.Application\PdfReportsGenerator.Application.csproj" />
       <ProjectReference Include="..\PdfReportsGenerator.Infrastructure\PdfReportsGenerator.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
